compilateurMinCaml/tests/typechecking/valid/Var.ml
let x = 101 in let y = x in print_int y