compilateurMinCaml/tests/typechecking/invalid/Var.ml
let x = 101 in let y = true in x + y